<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <net.lvtushiguang.trip.widget.AvatarView
        android:id="@+id/iv_avatar"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20"
        android:contentDescription="@null"
        android:src="@drawable/widget_dface"
        app:border_color="@color/white"
        app:border_width="2dip"/>

    <LinearLayout
        android:id="@+id/ll_mobile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_avatar"
        android:layout_marginTop="@dimen/space_35"
        android:background="@color/dark_background"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_10"
                android:text="账号"/>

            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_account"
                android:maxLength="20"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/iv_clearnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/space_5"
                android:src="@drawable/login_delete_icon"
                android:visibility="invisible"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:background="@color/line_division"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_10"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/iv_clearpasd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/space_5"
                android:src="@drawable/login_delete_icon"
                android:visibility="invisible"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_default"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/button_common_blue"
        android:layout_below="@+id/ll_mobile_password"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_findpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_10"
        android:text="@string/find_password"
        android:textColor="@color/lightblue"
        android:textSize="15.0dip"
        android:visibility="invisible"/>

</RelativeLayout>